[package]
name = "distributed-rsa"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.3.0"
rand = "0.7.3"
num-traits = "0.2.12"
num-bigint-dig = "0.3.0"

